version 0.79.03
	code cleanup ( Ethan Queen )
	Support for K-01 added by Ethan Queen <ethanqueen@gmail.com>
	Bulb mode in GUI version
	Merged save settings into Settings window
	Merged preview icons into Main window
	Eliminated Buffer Window
	Require at least gtk+ 2.16
	Eliminating libglade ( using GtkBuilder instead )

version 0.79.02 ( 2013-01-12 )
	--reconnect
	Fix K-5 zoom reading bug
	Adding command line html file to windows zip
	Rpm creation 64bit bugfix
	Updating lens info database ( exiftool 8.770 )
	--timeout
	mingw32 ( Windows cross-compiler update )
	Limited support bugfix
	Adding limited support for K100D Super

version 0.79.00 ( 2012-10-03 )
	Support for K-30 added by Camilo Polymeris <cpolymeris@gmail.com>

version 0.78.00 ( 2012-07-29 )
	Building deb package for Raspbian ( Raspberry PI )

version 0.77.12 ( 2012-07-24 )
	--model ( buggy )
	--nowarnings
	--device
	Linux: Using /sys/block if /sys/class/scsi_generic is unaccessible ( Debian Wheezy )

version 0.77.10 ( 2012-04-15 )
	Precisier delay handling
	Supporting >30s shutter speeds ( only in Bulb mode )
	Exposure mode bugfix ( adding off-auto-aperture modes )
	Command line: status info printing bugfix
	Light meter flag reading bugfix
	Ubuntu 11.10 compilation bugfix (Neil Gierman)
	Segmentation fault bugfix ( rhempel )
	--warnings and --debug switches work regardless of command line	position
	Reading af mode, ae metering fields ( K20D )

version 0.77.08 ( 2012-03-24 )
	K-5 bugfix (patch by Rune Frøysa)
	Human readable custom ev steps
	GUI: Status info
	Human readable white balance adjustments
	--white_balance_adjustment
	Source package creation bugfix

version 0.77.06 ( 2012-01-08 )
	glade code cleanup
	Adding libxml2-2.dll to windows zip
	automatically select new picture in buffer window
	--white_balance_mode
	Histogram info added to buffers window.
	Deleted histogram window.

version 0.77.04 ( 2011-11-01 )
	--select_af_point
	Store extended iso range for camera models