@@ -119,6 +119,12 @@ typedef enum {
     PSLR_CUSTOM_EV_STEPS_MAX
 } pslr_custom_ev_steps_t;
 
+typedef enum {
+    PSLR_RAW_FORMAT_PEF,
+    PSLR_RAW_FORMAT_DNG,
+    PSLR_RAW_FORMAT_MAX
+} pslr_raw_format_t;
+
 int str_comparison_i (const char *s1, const char *s2, int n);
 int find_in_array( const char** array, int length, char* str );
 
@@ -148,6 +154,8 @@ const char *get_pslr_white_balance_mode_str( pslr_white_balance_mode_t value );
 
 //pslr_custom_ev_steps_t get_pslr_custom_ev_steps( char *str );
 const char *get_pslr_custom_ev_steps_str( pslr_custom_ev_steps_t value );
+
+const char *get_pslr_raw_format_str( pslr_raw_format_t value );
 
 
 #endif
