@@ -53,7 +53,7 @@ ipslr_model_info_t camera_models[] = {
     { 0x12f52, "K-30",     0, 452, 3, {16, 12, 8, 5}, 9, 6000, 100,12800, 100, 25600, PSLR_JPEG_IMAGE_TONE_BLEACH_BYPASS, ipslr_status_parse_k30   },
     { 0x12ef8, "K-01",     0, 452, 3, {16, 12, 8, 5}, 9, 4000, 100,12800, 100, 25600, PSLR_JPEG_IMAGE_TONE_BLEACH_BYPASS, ipslr_status_parse_k01   },
 // only limited support from here
-    { 0x12994, "*ist D",   1, 0,   3, {6, 4, 2}, 3, 4000, 200, 3200, 200, 3200, PSLR_JPEG_IMAGE_TONE_NONE  , NULL},
+    { 0x12994, "*ist D",   1, 0,   3, {6, 4, 2}, 3, 4000, 200, 3200, 200, 3200, PSLR_JPEG_IMAGE_TONE_NONE  , NULL}, // buffersize: 264 
     { 0x12b60, "*ist DS2", 1, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, 200, 3200, PSLR_JPEG_IMAGE_TONE_BRIGHT, NULL},
     { 0x12b1a, "*ist DL",  1, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, 200, 3200, PSLR_JPEG_IMAGE_TONE_BRIGHT, NULL},
     { 0x12b9d, "K110D",    0, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, 200, 3200, PSLR_JPEG_IMAGE_TONE_BRIGHT, NULL},
@@ -245,6 +245,9 @@ void ipslr_status_parse_istds(ipslr_handle_t *p, pslr_status *status) {
     status->lens_min_aperture.denom = get_uint32(&buf[0xbc]);
     status->lens_max_aperture.nom = get_uint32(&buf[0xc0]);
     status->lens_max_aperture.denom = get_uint32(&buf[0xc4]);
+    
+    // no DNG support so raw format is PEF
+    status->raw_format = PSLR_RAW_FORMAT_PEF;
 }
 
 // some of the cameras share most of the status fields
