@@ -7,6 +7,8 @@ version 0.79.03
 	Eliminated Buffer Window
 	Require at least gtk+ 2.16
 	Eliminating libglade ( using GtkBuilder instead )
+	Human readable raw format
+	Attempt to fix *istD bug
 
 version 0.79.02 ( 2013-01-12 )
 	--reconnect
